# Grade_calculator

./: README.md  setup.cfg  window.py  window.ui
.github/workflows/: python-package.yml
Grade_Calculator/: __init__.py
src/Grade_Calculator/: main.py
