[metadata]
name = Grade_Calculator-Da-Top-Hat
version = 0.0.1
author = Da_Top_Hat
author_email = edu.hallmoot@aleeas.com
description = A thing to Calculate Grades
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DaTopHat/Grade_calculator
project_urls =
    Bug Tracker = https://github.com/DaTopHat/Grade_calculator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Private :: Do Not Upload

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src